# math

./: .appveyor.yml  CMakeLists.txt  README.md  allocator.hpp  common.hpp  dvec2.hpp  dvec3.hpp  dvec4.hpp  exponential.hpp  geometric.hpp  ivec2.hpp  ivec3.hpp  ivec4.hpp  mat2.hpp  mat3.hpp  mat4.hpp  math.cpp  math.hpp  quat.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp
internal/: math_avx.hpp  math_avx.ipp  math_funcs.hpp  math_neon.hpp  math_ref.hpp  math_sse2.hpp  math_sse2.ipp  math_sse3.ipp  math_sse4_1.hpp  types.hpp
math/: Android.mk  CMakeLists.txt  allocator.hpp  common.hpp  dmat2.hpp  dmat3.hpp  dmat4.hpp  dvec2.hpp  dvec3.hpp  dvec4.hpp  exponential.hpp  geometric.hpp  ivec2.hpp  ivec3.hpp  ivec4.hpp  mat2.hpp  mat3.hpp  mat4.hpp  math.cpp  math.hpp  math_avx.hpp  math_funcs.hpp  math_neon.hpp  math_ref.hpp  math_sse2.hpp  math_sse3.hpp  math_sse4_1.hpp  quat.hpp  transform.hpp  trigonometric.hpp  types.hpp  vec2.hpp  vec3.hpp  vec4.hpp
math/internal/: math_avx.hpp  math_avx.ipp  math_funcs.hpp  math_ref.hpp  math_ref.ipp  math_sse2.hpp  math_sse2.ipp  math_sse3.hpp  math_sse4_1.ipp  types.hpp
math/tests/: CMakeLists.txt  main.cpp  test_assert.h  test_comb.cpp  test_common.cpp  test_data.cpp  test_dmat2.cpp  test_dmat3.cpp  test_dmat4.cpp  test_dvec2.cpp  test_dvec3.cpp  test_dvec4.cpp  test_geometric.cpp  test_ivec2.cpp  test_ivec3.cpp  test_ivec4.cpp  test_mat2.cpp  test_mat3.cpp  test_mat4.cpp  test_perf.cpp  test_quat.cpp  test_transform.cpp  test_trigonometric.cpp  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp
src/: common.hpp  exponential.hpp  mat2.hpp  mat3.hpp  mat4.hpp  math.hpp  math_avx.hpp  math_funcs.hpp  math_neon.hpp  math_ref.hpp  math_sse2.hpp  math_sse3.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/tests/: CMakeLists.txt  main.cpp  test_mat2.cpp  test_mat3.cpp  test_mat4.cpp  test_perf.cpp  test_trigonometric.cpp  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp
tests/: CMakeLists.txt  main.cpp  test_assert.h  test_comb.cpp  test_common.cpp  test_data.cpp  test_dvec2.cpp  test_dvec3.cpp  test_dvec4.cpp  test_geometric.cpp  test_ivec2.cpp  test_ivec3.cpp  test_ivec4.cpp  test_mat2.cpp  test_mat3.cpp  test_mat4.cpp  test_perf.cpp  test_quat.cpp  test_transform.cpp  test_trigonometric.cpp  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp
